--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -3,6 +3,7 @@
   "background.error.title.token-expired": "Le jeton de sécurité du document a expiré",
   "background.error.title.create-room": "Désolé, vous n'avez pas l'autorisation de créer des salles",
   "background.error.title.no-room-access": "Malheureusement, vous n'avez pas accès à cette salle",
+  "background.error.title.not-available": "",
   "background.error.subtitle.common": "Un problème s'est produit. Veuillez recharger l'application.",
   "background.error.subtitle.token-expired": "Un problème est survenu. Veuillez réautoriser l'application.",
   "background.error.subtitle.plugin.not-active.message": "L'application ONLYOFFICE DocSpace n'est pas encore disponible",
