--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -3,6 +3,7 @@
   "background.error.title.token-expired": "ドキュメントのセキュリティトークンが期限切れです",
   "background.error.title.create-room": "申し訳ありませんが、ルームを作成する権限がありません",
   "background.error.title.no-room-access": "申し訳ありませんが、このルームにはアクセスできません。",
+  "background.error.title.not-available": "",
   "background.error.subtitle.common": "何か問題が発生しました。アプリを再読み込みしてください。",
   "background.error.subtitle.token-expired": "何か問題が発生しました。アプリを再承認してください。",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace アプリはまだ利用できません",
