--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -3,6 +3,7 @@
   "background.error.title.token-expired": "Das Sicherheits-Token des Dokuments ist abgelaufen",
   "background.error.title.create-room": "Sie haben leider keine Berechtigung zum Erstellen von Räumen",
   "background.error.title.no-room-access": "Sie haben leider keinen Zugang zu diesem Raum",
+  "background.error.title.not-available": "",
   "background.error.subtitle.common": "Etwas ist schief gelaufen. Bitte laden Sie die App neu.",
   "background.error.subtitle.token-expired": "Etwas ist schief gelaufen. Bitte autorisieren Sie die App erneut.",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App ist noch nicht verfügbar",
