--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -3,6 +3,7 @@
   "background.error.title.token-expired": "El token de seguridad del documento ha expirado",
   "background.error.title.create-room": "Lo sentimos, no tiene permiso para crear salas",
   "background.error.title.no-room-access": "Lo sentimos, no tiene acceso a esta sala",
+  "background.error.title.not-available": "",
   "background.error.subtitle.common": "Algo ha salido mal. Por favor, vuelva a cargar la aplicación.",
   "background.error.subtitle.token-expired": "Algo ha salido mal. Por favor, vuelva a autorizar la aplicación.",
   "background.error.subtitle.plugin.not-active.message": "La aplicación ONLYOFFICE DocSpace todavía no está disponible",
