--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -3,6 +3,7 @@
   "background.error.title.token-expired": "Il token di sicurezza del documento è scaduto",
   "background.error.title.create-room": "Spiacenti, non hai l'autorizzazione per creare stanze",
   "background.error.title.no-room-access": "Siamo spiacenti, non hai accesso a questa stanza",
+  "background.error.title.not-available": "",
   "background.error.subtitle.common": "Qualcosa è andato storto. Ricarica l'app.",
   "background.error.subtitle.token-expired": "Qualcosa è andato storto. Autorizza nuovamente l'app.",
   "background.error.subtitle.plugin.not-active.message": "L'app ONLYOFFICE DocSpace non è ancora disponibile",
