feat(frontend): update COMMON_ERROR error stub

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -1,10 +1,10 @@
 ﻿{
-  "background.error.title.common": "Fehler",
+  "background.error.title.common": "",
   "background.error.title.token-expired": "Das Sicherheits-Token des Dokuments ist abgelaufen",
   "background.error.title.create-room": "Sie haben leider keine Berechtigung zum Erstellen von Räumen",
   "background.error.title.no-room-access": "Sie haben leider keinen Zugang zu diesem Raum",
   "background.error.title.not-available": "",
-  "background.error.subtitle.common": "Etwas ist schief gelaufen. Bitte laden Sie die App neu.",
+  "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "Etwas ist schief gelaufen. Bitte autorisieren Sie die App erneut.",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App ist noch nicht verfügbar",
   "background.error.subtitle.plugin.not-active.help": "Bitte warten Sie, bis ein Pipedrive-Administrator die App-Einstellungen konfiguriert hat",
@@ -38,6 +38,7 @@
   "docspace.room.type.public": "Öffentlicher Raum",
   "docspace.room.type.vdr": "Virtueller Datenraum",
   "docspace.room.type.custom": "Benutzerdefinierter Raum",
+  "error.common": "Etwas ist schief gelaufen. Bitte laden Sie die App neu.",
   "link.learn-more": "Mehr erfahren",
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
