--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -1,10 +1,10 @@
 ﻿{
-  "background.error.title.common": "Error",
+  "background.error.title.common": "",
   "background.error.title.token-expired": "El token de seguridad del documento ha expirado",
   "background.error.title.create-room": "Lo sentimos, no tiene permiso para crear salas",
   "background.error.title.no-room-access": "Lo sentimos, no tiene acceso a esta sala",
   "background.error.title.not-available": "",
-  "background.error.subtitle.common": "Algo ha salido mal. Por favor, vuelva a cargar la aplicación.",
+  "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "Algo ha salido mal. Por favor, vuelva a autorizar la aplicación.",
   "background.error.subtitle.plugin.not-active.message": "La aplicación ONLYOFFICE DocSpace todavía no está disponible",
   "background.error.subtitle.plugin.not-active.help": "Por favor, espere hasta que un administrador de Pipedrive configure los ajustes de la aplicación.",
@@ -38,6 +38,7 @@
   "docspace.room.type.public": "Sala pública",
   "docspace.room.type.vdr": "Sala de datos virtuales",
   "docspace.room.type.custom": "Sala personalizada",
+  "error.common": "Algo ha salido mal. Por favor, vuelva a cargar la aplicación.",
   "link.learn-more": "Más información",
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
