--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -1,10 +1,10 @@
 ﻿{
-  "background.error.title.common": "Errore",
+  "background.error.title.common": "",
   "background.error.title.token-expired": "Il token di sicurezza del documento è scaduto",
   "background.error.title.create-room": "Spiacenti, non hai l'autorizzazione per creare stanze",
   "background.error.title.no-room-access": "Siamo spiacenti, non hai accesso a questa stanza",
   "background.error.title.not-available": "",
-  "background.error.subtitle.common": "Qualcosa è andato storto. Ricarica l'app.",
+  "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "Qualcosa è andato storto. Autorizza nuovamente l'app.",
   "background.error.subtitle.plugin.not-active.message": "L'app ONLYOFFICE DocSpace non è ancora disponibile",
   "background.error.subtitle.plugin.not-active.help": "Attendere finché un amministratore Pipedrive non configura le impostazioni dell'app",
@@ -38,6 +38,7 @@
   "docspace.room.type.public": "Stanza pubblica",
   "docspace.room.type.vdr": "Stanza di dati virtuale",
   "docspace.room.type.custom": "Stanza personalizzata",
+  "error.common": "Qualcosa è andato storto. Ricarica l'app.",
   "link.learn-more": "Per saperne di più",
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
