--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -1,10 +1,10 @@
 ﻿{
-  "background.error.title.common": "Erro",
+  "background.error.title.common": "",
   "background.error.title.token-expired": "O token de segurança do documento expirou",
   "background.error.title.create-room": "Desculpe, você não tem permissão para criar salas",
   "background.error.title.no-room-access": "Desculpe, você não tem acesso a esta sala",
   "background.error.title.not-available": "",
-  "background.error.subtitle.common": "Algo deu errado. Recarregue o aplicativo.",
+  "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "Algo deu errado. Reautorize o aplicativo.",
   "background.error.subtitle.plugin.not-active.message": "O aplicativo ONLYOFFICE DocSpace ainda não está disponível",
   "background.error.subtitle.plugin.not-active.help": "Aguarde até que um administrador do Pipedrive configure as configurações do aplicativo",
@@ -38,6 +38,7 @@
   "docspace.room.type.public": "Sala pública",
   "docspace.room.type.vdr": "Sala de dados virtual",
   "docspace.room.type.custom": "Sala personalizada",
+  "error.common": "Algo deu errado. Recarregue o aplicativo.",
   "link.learn-more": "Saiba mais",
   "room.creating.ok": "A sala ONLYOFFICE DocSpace foi criada com sucesso!",
   "room.creating.error": "Falha ao criar a sala ONLYOFFICE DocSpace!",
