--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -1,10 +1,10 @@
 {
-  "background.error.title.common": "Ошибка",
+  "background.error.title.common": "",
   "background.error.title.token-expired": "Срок действия токена безопасности документа истек",
   "background.error.title.create-room": "К сожалению, у вас нет разрешения на создание комнат",
   "background.error.title.no-room-access": "К сожалению, у вас нет доступа к этой комнате",
   "background.error.title.not-available": "",
-  "background.error.subtitle.common": "Что-то пошло не так. Пожалуйста, перезагрузите приложение",
+  "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "Что-то пошло не так. Пожалуйста, авторизуйте приложение повторно",
   "background.error.subtitle.plugin.not-active.message": "Приложение ONLYOFFICE DocSpace недоступно",
   "background.error.subtitle.plugin.not-active.help": "Пожалуйста, подождите, когда администратор Pipedrive настроит приложение",
@@ -38,6 +38,7 @@
   "docspace.room.type.public": "Публичная комната",
   "docspace.room.type.vdr": "Виртуальная комната данных",
   "docspace.room.type.custom": "Пользовательская комната",
+  "error.common": "Что-то пошло не так. Пожалуйста, перезагрузите приложение",
   "link.learn-more": "Узнать больше",
   "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
   "room.creating.error": "Не удалось создать комнату ONLYOFFICE DocSpace!",
