--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -1,10 +1,10 @@
 {
-  "background.error.title.common": "Error",
+  "background.error.title.common": "Something went wrong",
   "background.error.title.token-expired": "The document security token has expired",
   "background.error.title.create-room": "Sorry, you don't have a permission to create rooms",
   "background.error.title.no-room-access": "Sorry, you don't have access to this room",
   "background.error.title.not-available": "Not yet available",
-  "background.error.subtitle.common": "Something went wrong. Please reload the app.",
+  "background.error.subtitle.common": "Could not fetch plugin settings. Please reload the Pipedrive window.",
   "background.error.subtitle.token-expired": "Something went wrong. Please re-authorize the app.",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App is not yet available",
   "background.error.subtitle.plugin.not-active.help": "Please wait until a Pipedrive Administrator configures the app settings",
@@ -38,6 +38,7 @@
   "docspace.room.type.public": "Public room",
   "docspace.room.type.vdr": "Virtual Data room",
   "docspace.room.type.custom": "Custom room",
+  "error.common": "Something went wrong. Please reload the app.",
   "link.learn-more": "Learn more",
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
