--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -1,10 +1,10 @@
 ﻿{
-  "background.error.title.common": "Erreur",
+  "background.error.title.common": "",
   "background.error.title.token-expired": "Le jeton de sécurité du document a expiré",
   "background.error.title.create-room": "Désolé, vous n'avez pas l'autorisation de créer des salles",
   "background.error.title.no-room-access": "Malheureusement, vous n'avez pas accès à cette salle",
   "background.error.title.not-available": "",
-  "background.error.subtitle.common": "Un problème s'est produit. Veuillez recharger l'application.",
+  "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "Un problème est survenu. Veuillez réautoriser l'application.",
   "background.error.subtitle.plugin.not-active.message": "L'application ONLYOFFICE DocSpace n'est pas encore disponible",
   "background.error.subtitle.plugin.not-active.help": "Veuillez patienter jusqu'à ce qu'un administrateur Pipedrive configure les paramètres de l'application",
@@ -38,6 +38,7 @@
   "docspace.room.type.public": "Salle publique",
   "docspace.room.type.vdr": "Salle de données virtuelle",
   "docspace.room.type.custom": "Salle personnalisée",
+  "error.common": "Un problème s'est produit. Veuillez recharger l'application.",
   "link.learn-more": "En savoir plus",
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
