--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -1,10 +1,10 @@
 ﻿{
-  "background.error.title.common": "エラー",
+  "background.error.title.common": "",
   "background.error.title.token-expired": "ドキュメントのセキュリティトークンが期限切れです",
   "background.error.title.create-room": "申し訳ありませんが、ルームを作成する権限がありません",
   "background.error.title.no-room-access": "申し訳ありませんが、このルームにはアクセスできません。",
   "background.error.title.not-available": "",
-  "background.error.subtitle.common": "何か問題が発生しました。アプリを再読み込みしてください。",
+  "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "何か問題が発生しました。アプリを再承認してください。",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace アプリはまだ利用できません",
   "background.error.subtitle.plugin.not-active.help": "Pipedrive 管理者によってアプリ設定が構成されるまでお待ちください",
@@ -38,6 +38,7 @@
   "docspace.room.type.public": "パブリックルーム",
   "docspace.room.type.vdr": "バーチャルデータルーム",
   "docspace.room.type.custom": "カスタムルーム",
+  "error.common": "何か問題が発生しました。アプリを再読み込みしてください。",
   "link.learn-more": "詳しくはこちら",
   "room.creating.ok": "ONLYOFFICE DocSpace ルームが正常に作成されました！",
   "room.creating.error": "ONLYOFFICE DocSpace ルームの作成に失敗しました！",
