--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -5,7 +5,7 @@
   "background.error.title.no-room-access": "申し訳ありませんが、このルームにはアクセスできません。",
   "background.error.title.not-available": "",
   "background.error.subtitle.common": "",
-  "background.error.subtitle.token-expired": "何か問題が発生しました。アプリを再承認してください。",
+  "background.error.subtitle.token-expired": "",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace アプリはまだ利用できません",
   "background.error.subtitle.plugin.not-active.help": "Pipedrive 管理者によってアプリ設定が構成されるまでお待ちください",
   "background.error.subtitle.docspace-connection": "ONLYOFFICE DocSpace に接続されていません",
